# FirstDokerProjectShop

./: .gitignore  DB_architecture.docx  Makefile  README.md  TZ_microservices.docx  docker-compose.yml  temp.txt
docs/: API.md  ARCHITECTURE.md  ENVIRONMENT.md  STRUCTURE.md
k8s/: auth.yaml  cart.yaml  catalog.yaml  gateway.yaml  ingress.yaml  kustomization.yaml  order.yaml  postgres.yaml  redis.yaml  secret.yaml
services/auth_service/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/auth_service/alembic/versions/: 0001_users.py
services/auth_service/app/: auth.py  config.py  errors.py  main.py  models.py  schemas.py
services/auth_service/app/routers/: auth.py
services/auth_service/scripts/: wait_for_db.py
services/cart_service/: Dockerfile  README.md  pyproject.toml
services/cart_service/app/: config.py  main.py
services/catalog_service/: Dockerfile  README.md  pyproject.toml
services/catalog_service/alembic/: env.py
services/catalog_service/alembic/versions/: 0001_initial.py  0002_product_details_and_templates.py
services/catalog_service/app/: authz.py  config.py  errors.py  main.py  models.py  schemas.py
services/catalog_service/app/routers/: products.py  templates.py
services/catalog_service/scripts/: wait_for_db.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/app/: config.py  main.py
services/gateway/static/: style.css
services/gateway/templates/: account.html  admin.html  admin_orders.html  admin_stats.html  admin_templates.html  base.html  cart.html  index.html  login.html  order_detail.html  orders.html  product.html  register.html
services/order_service/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
services/order_service/alembic/versions/: 0001_initial.py
services/order_service/app/: config.py  db.py  main.py  models.py  schemas.py
services/order_service/app/scripts/: wait_for_db.py
